--- a/client/app-project/src/app/component/managements/ruta/ruta-form/ruta-form.component.html
+++ b/client/app-project/src/app/component/managements/ruta/ruta-form/ruta-form.component.html
@@ -1,41 +1,39 @@
 <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Formulario Rutas</h5>
-      <hr>
-      <form [formGroup]="postForm" (ngSubmit)="submitForm()">
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <label class="form-label">Identificador</label>
-                <input formControlName="identificador" type="text" class="form-control" aria-describedby="emailHelp">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <label class="form-label">Duracion</label>
-                <textarea formControlName="duracion" class="form-control" aria-describedby="emailHelp"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="mb-3">
-                    <label class="form-label">Origen</label>
-                    <textarea formControlName="origen" class="form-control" aria-describedby="emailHelp"></textarea>
+        <h5 class="card-title">Formulario Rutas</h5>
+        <hr>
+        <form [formGroup]="postForm" (ngSubmit)="submitForm()">
+            <div class="row mb-3">
+                <div class="col-lg-12">
+                    <label class="form-label">Identificador</label>
+                    <input formControlName="identificador" type="text" class="form-control">
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="mb-3">
-                    <label class="form-label">Destino</label>
-                    <textarea formControlName="destino" class="form-control" aria-describedby="emailHelp"></textarea>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="mb-3">
+                        <label class="form-label">Origen</label>
+                        <input formControlName="origen" type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="mb-3">
+                        <label class="form-label">Destino</label>
+                        <input formControlName="destino" type="text" class="form-control">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <label class="form-label">Porcentaje de descuento</label>
-                <textarea formControlName="porc_descuento" class="form-control" aria-describedby="emailHelp"></textarea>
+            <div class="row mb-3">
+                <div class="col-lg-6">
+                    <label class="form-label">Duracion</label>
+                    <input formControlName="duracion" type="number" class="form-control" min="1" max="20">
+                </div>
+                <div class="col-lg-6">
+                    <label class="form-label">Descuento</label>
+                    <input formControlName="porc_descuento" type="number" class="form-control" min="1" max="10">
+                </div>
             </div>
-        </div>
-        <button type="submit" class="btn btn-primary mt-4">Guardar</button>
-    </form>
+            <button type="submit" class="btn btn-primary mt-4">Guardar</button>
+        </form>
     </div>
-  </div>
+</div>
