--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -78,13 +78,13 @@
             </div>
         </div>
 
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFour"
                 aria-expanded="true">
                 <i class="far fa-calendar-alt"></i>
                 <span>Rutas</span>
             </a>
-            
-            <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+
+            <div id="collapseFour" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="dashboard/management/ruta/form">Crear Ruta</a>
                     <a class="collapse-item" href="dashboard/management/ruta/list">Lista de Rutas</a>
