--- a/client/app-project/src/app/component/admin-home/admin-home.component.html
+++ b/client/app-project/src/app/component/admin-home/admin-home.component.html
@@ -3,9 +3,9 @@
     rel="stylesheet">
 
 <div id="wrapper">
-    
+
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-        
+
         <br>
 
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
@@ -29,7 +29,7 @@
 
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                <i class="fas fa-plane"></i>                
+                <i class="fas fa-plane"></i>
                 <span> Vuelos</span>
             </a>
 
@@ -45,7 +45,7 @@
                 <i class="far fa-calendar-alt"></i>
                 <span> Tipos de Aviones</span>
             </a>
-            
+
             <div id="collapseTwo" class="collapse" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="dashboard/tipoavion/form">Crear Avion</a>
@@ -58,7 +58,7 @@
                 <i class="far fa-calendar-alt"></i>
                 <span>Rutas</span>
             </a>
-            
+
             <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="dashboard/ruta/form">Crear Ruta</a>
@@ -88,23 +88,20 @@
                 </form>
 
                 <ul class="navbar-nav ml-auto">
-
-                    <div class="topbar-divider d-none d-sm-block"></div>
-
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-user"></i>
-                            <span class="ml-3 mr-2 d-none d-lg-inline text-gray-600 small">Jose Campos</span>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button"
+                                    id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {{ user.user.user }}
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <li><a class="dropdown-item" routerLink="/">Vista Cliente</a></li>
+                                    <li><a (click)="cerrarSesion()" class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                                </ul>
+                            </div>
                         </a>
-
-                        <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                            aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Cerrar Sesion
-                            </a>
-                        </div>
                     </li>
                 </ul>
             </nav>
