--- a/client/app-project/src/app/component/header/header.component.html
+++ b/client/app-project/src/app/component/header/header.component.html
@@ -11,60 +11,68 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#search">Buscar Vuelo</a></li>
           <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
-          <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
-          <li><a class="nav-link scrollto" href="/check-in">Check-in</a></li>
           <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
-          <!--
-          <li class="dropdown"><a href="#"><span>Mantenimientos</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Tipos de aviones</a></li>
-              <li><a href="#">Rutas</a></li>
-              <li><a href="#">Horarios</a></li>
-              <li><a href="#">Vuelos</a></li>
-              <li><a href="#">Usuarios</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Reportes</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Facturas por mes </a></li>
-              <li><a href="#">Clientes por avión</a></li>
-              <li><a href="#">Rutas con más ventas</a></li>
-            </ul>
-          </li>
-          -->
         </ul>
-        <a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a>
+        <div *ngIf="isValid; else notValid">
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Usuario: {{ user.user.user }}
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" routerLink="/dashboard">Vista Administrador</a></li>
+              <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesion</a></li>
+            </ul>
+          </div>
+        </div>
+        <ng-template #notValid>
+          <a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a>
+        </ng-template>
       </nav>
     </div>
   </div>
 
 </header>
 
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class=" p-4">
-      <nav class="navbar-responsive">
+<div class="collapse" id="navbarToggleExternalContent">
+  <div class=" p-4">
+    <nav class="navbar-responsive">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+        <li><a class="nav-link scrollto" href="#search">Buscar Vuelo</a></li>
         <li><a class="nav-link scrollto" href="#about">¿Quienes Somos?</a></li>
-        <li><a class="nav-link scrollto" href="#services">Vuelos</a></li>
-        <li><a class="nav-link" href="/check-in">Check-in</a></li>
         <li><a class="nav-link scrollto" href="#contact">Cantáctenos</a></li>
-        <li><a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a></li>
+        <div *ngIf="isValid; else notValid">
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Usuario: {{ user.user.user }}
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesion</a></li>
+            </ul>
+          </div>
+        </div>
+        <ng-template #notValid>
+          <a class="getstarted scrollto btn-primary ml-5" href="/login">Iniciar Sesion</a>
+        </ng-template>
       </ul>
     </nav>
-    </div>
   </div>
-  <nav class="navbar navbar-light bg-light navbar-responsive">
-    <div class="container-fluid">
-      <div>
-        <a href="index.html" class="navbar-responsive-logo">
-          <img src="../../../assets/img/logo.png" alt="">
-          <span>Skyline</span>
-        </a>
-      </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+</div>
+<nav class="navbar navbar-light bg-light navbar-responsive">
+  <div class="container-fluid">
+    <div>
+      <a href="index.html" class="navbar-responsive-logo">
+        <img src="../../../assets/img/logo.png" alt="">
+        <span>Skyline</span>
+      </a>
     </div>
-  </nav>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent"
+      aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</nav>
